finished to change remove.html to remove.html

--- a/views/find.ejs
+++ b/views/find.ejs
@@ -27,7 +27,7 @@
         </table>
     <% }%>
     <% if (error) { %>
-        <h3>error</h3>
+        <h3><%= error %></h3>
     <% } %>
 </body>
 
