finished change index.html to index.ejs and implemented components views

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,14 +1,4 @@
-<html>
-
-<head>
-    <meta charset="utf8" />
-</head>
-
-<title>
-    Hello World
-</title>
-
-<body>
+<%- include("components/header")%>
     <a href="/index" title="home">Home</a> &gt; Add
     <hr/>
     <form action="/add" method="POST">
@@ -17,25 +7,5 @@
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Add"></input>
     </form>
-    <% if(gits && gits.length>0){ %>
-        <table>
-            <thead>
-                <tr>
-                    <td>git</td>
-                    <td>name</td>
-                    <td>email</td>
-                </tr>
-            </thead>
-            <tbody>
-                <% gits.forEach(function(git){ %>
-                <tr>
-                    <td><%= git.git%></td>
-                    <td><%= git.name%></td>
-                    <td><%= git.email%></td>
-                </tr>
-                <% }); %>
-            </tbody>
-        </table>
-    <% } %>
-</body>
-</html>
+<%- include("components/gitsTable")%>
+<%- include("components/footer")%>
