--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,14 +1,4 @@
-<html>
-
-<head>
-    <meta charset="utf8" />
-</head>
-
-<title>
-    Hello World
-</title>
-
-<body>
+<%- include("components/header")%>
     <a href="/index" title="home">Home</a> &gt; <a href="/find?email=<%= oEmail %>" title="find">Find</a> &gt;Edit
     <hr/>
     <form action="/edit" method="POST">
@@ -20,6 +10,4 @@
     <% if (error){ %>
     <h3><%= error %></h3>
     <% } %>
-</body>
-
-</html>
+<%- include("components/footer")%>
