--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,9 @@
-<html>
-
-<head>
-    <meta charset="utf8" />
-</head>
-
-<title>
-    Hello World
-</title>
-
-<body>
+<%- include("components/header")%>
     <h1>Hello World</h1>
     <ul>
         <li><a href="/add">Add</a></li>
         <li><a href="/find">Find</a></li>
         <li><a href="/remove">Remove</a></li>
     </ul>
-</body>
-
-</html>
+<%- include("componets/gitsTable")%>
+<%- include("components/footer")%>
