--- a/views/remove.ejs
+++ b/views/remove.ejs
@@ -1,14 +1,4 @@
-<html>
-
-<head>
-    <meta charset="utf8" />
-</head>
-
-<title>
-    Hello World
-</title>
-
-<body>
+<%- include("components/header")%>
     <a href="/index" title="home">Home</a> &gt; Remove
     <hr/>
     <form action="/remove" method="POST">
@@ -21,5 +11,4 @@
         </h3>
     <% }%>
 </body>
-
-</html>
+<%- include("components/footer")%>
