finished to change 404.html to 404.ejs

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,9 +6,9 @@
 <title>
     404 NOT FOUND
 </title>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8"></script>
 
 <body>
-    404 NOT FOUND
 </body>
 
 </html>
