--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,5 @@
         <li><a href="/find">Find</a></li>
         <li><a href="/remove">Remove</a></li>
     </ul>
-<%- include("componets/gitsTable")%>
+<%- include("components/gitsTable")%>
 <%- include("components/footer")%>
