--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <%- include("components/header")%>
     <a href="/index" title="home">Home</a> &gt; <a href="/find?email=<%= oEmail %>" title="find">Find</a> &gt;Edit
     <hr/>
-    <form action="/edit" method="POST">
+    <form method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git" value="<%= git.git %>"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name" value="<%= git.name %>"></inpu><br/>
         <label for="email">Email: </label><input type="text" id="email" name="email" value="<%= git.email %>"></input><br/>
