remove actions of post method in the form

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,7 +1,7 @@
 <%- include("components/header")%>
     <a href="/index" title="home">Home</a> &gt; Add
     <hr/>
-    <form action="/add" method="POST">
+    <form method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name"></inpu><br/>
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
