--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,5 +1,5 @@
 <%- include("components/header")%>
-    <a href="/index" title="home">Home</a> &gt; <a href="/find?email=<%= oEmail %>" title="find">Find</a> &gt;Edit
+    <a href="/" title="home">Home</a> &gt; <a href="/gits/find?email=<%= oEmail %>" title="find">Find</a> &gt;Edit
     <hr/>
     <form method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git" value="<%= git.git %>"></input><br/>
