--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <%- include("components/header")%>
     <h1>Hello World</h1>
     <ul>
-        <li><a href="/add">Add</a></li>
-        <li><a href="/find">Find</a></li>
-        <li><a href="/remove">Remove</a></li>
+        <li><a href="/gits/add">Add</a></li>
+        <li><a href="/gits/find">Find</a></li>
+        <li><a href="/gits/remove">Remove</a></li>
     </ul>
 <%- include("components/gitsTable")%>
 <%- include("components/footer")%>
