--- a/views/remove.ejs
+++ b/views/remove.ejs
@@ -1,5 +1,5 @@
 <%- include("components/header")%>
-    <a href="/index" title="home">Home</a> &gt; Remove
+    <a href="/" title="home">Home</a> &gt; Remove
     <hr/>
     <form method="POST">
         <label for="email">Email: </label><input type="text" id="email" name="email" value="<%= email %>"></input>
