--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,5 +1,5 @@
 <%- include("components/header")%>
-    <a href="/index" title="home">Home</a> &gt; Add
+    <a href="/" title="home">Home</a> &gt; Add
     <hr/>
     <form method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
