introduce connect-flash and express-session

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -7,5 +7,6 @@
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Add"></input>
     </form>
+<%- include("components/notification")%>
 <%- include("components/gitsTable")%>
 <%- include("components/footer")%>
