--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,7 +7,5 @@
         <label for="email">Email: </label><input type="text" id="email" name="email" value="<%= git.email %>"></input><br/>
         <input type="submit" value="Save"></input>
     </form>
-    <% if (error){ %>
-    <h3><%= error %></h3>
-    <% } %>
+<%- include("components/notification")%>
 <%- include("components/footer")%>
