--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,6 @@
         <li><a href="/gits/find">Find</a></li>
         <li><a href="/gits/remove">Remove</a></li>
     </ul>
+<%- include("components/notification")%>
 <%- include("components/gitsTable")%>
 <%- include("components/footer")%>
